# pbrt

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
include/core/: AnimatedTransformation.hpp  BoundingSphere.hpp  Bounds2.hpp  Bounds2Impl.hpp  Bounds2Iterator.hpp  Bounds3.hpp  Bounds3Impl.hpp  BoundsIterator.hpp  EFloat.hpp  Functional.hpp  GeometricPrimitive.hpp  Interaction.hpp  Interval.hpp  Material.hpp  Matrix4x4.hpp  Medium.hpp  Normal3.hpp  Normal3Impl.hpp  Parallel.hpp  Point2.hpp  Point2Impl.hpp  Point3.hpp  Point3Impl.hpp  Primitive.hpp  Quaternion.hpp  Ray.hpp  RayDifferential.hpp  Shape.hpp  SurfaceInteraction.hpp  TRS.hpp  Texture.hpp  Transformation.hpp  TransformationImpl.hpp  TransformedPrimitive.hpp  Vector2.hpp  Vector2Impl.hpp  Vector3.hpp  Vector3Impl.hpp  core.hpp
include/functional/: Functional.hpp
include/memory/: BlockedUVArray.hpp  BlockedUVArrayImpl.hpp  Memory.hpp  MemoryArena.hpp
include/pbrt/accelerators/: BVH.hpp  BVHBuilders.hpp
include/pbrt/accelerators/bvh/: BVH.hpp  BVHBuilders.hpp  HLBVHBuilder.hpp  RecursiveBuilder.hpp
include/pbrt/cameras/: EnvironmentCamera.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp
include/pbrt/core/: AtomicFloat.hpp  BoundingSphere.hpp  Bounds2.hpp  Bounds2Impl.hpp  Bounds2Iterator.hpp  Bounds3.hpp  Bounds3Impl.hpp  Camera.hpp  CoefficientSpectrum.hpp  EFloat.hpp  Film.hpp  GeometricPrimitive.hpp  Geometry.hpp  Interaction.hpp  Material.hpp  Normal3Impl.hpp  Optional.hpp  Point2Impl.hpp  Primitive.hpp  Quaternion.hpp  RNG.hpp  Ray.hpp  Reflection.hpp  SampledSpectrum.hpp  Sampling.hpp  Shape.hpp  Spectrum.hpp  SurfaceInteraction.hpp  TRS.hpp  Transformation.hpp  TransformationImpl.hpp  TransformedPrimitive.hpp  Vector2Impl.hpp  Vector3.hpp  core.hpp
include/pbrt/core/color/: CoefficientSpectrum.hpp  Spectrum.hpp
include/pbrt/core/geometry/: BoundingSphere.hpp  Bounds2.hpp  Bounds2Iterator.hpp  Bounds3.hpp  Bounds3Impl.hpp  Ray.hpp  RayDifferential.hpp  Utility.hpp
include/pbrt/core/math/: Fwd.hpp  Interval.hpp  Math.hpp  Matrix4x4.hpp  Normal3.hpp  Normal3Impl.hpp  Point2.hpp  Point2Impl.hpp  Point3.hpp  Point3Impl.hpp  Vector2.hpp  Vector2Impl.hpp  Vector3.hpp  Vector3Impl.hpp
include/pbrt/core/primitive/: GeometricPrimitive.hpp  Primitive.hpp
include/pbrt/core/reflection/: BxDF.hpp  Utility.hpp
include/pbrt/core/sampling/: Filter.hpp  GlobalSampler.hpp  LowDiscrepancy.hpp  PixelSampler.hpp  Sampler.hpp  Sampling.hpp
include/pbrt/core/transformations/: AnimatedTransformation.hpp  Quaternion.hpp  TRS.hpp  Transformation.hpp  TransformationImpl.hpp
include/pbrt/filters/: Box.hpp  Gaussian.hpp  Mitchell.hpp  Sinc.hpp  Triangle.hpp
include/pbrt/functional/: Functional.hpp
include/pbrt/memory/: Memory.hpp  MemoryArena.hpp
include/pbrt/parallel/: Parallel.hpp
include/pbrt/reflection_models/: LambertianReflection.hpp  LambertianTransmission.hpp  SpecularReflection.hpp  SpecularTransmission.hpp
include/pbrt/samplers/: HaltonSampler.hpp  StratifiedSampler.hpp
include/pbrt/shapes/: Cone.hpp  Cylinder.hpp  Disk.hpp  Paraboloid.hpp  Sphere.hpp  Triangle.hpp
include/shapes/: Cone.hpp  Cylinder.hpp  Disk.hpp  Paraboloid.hpp  Sphere.hpp  Triangle.hpp
src/accelerators/: BVH.cpp  BVHRecursiveBuilder.cpp  CMakeLists.txt  HLBVHBuilder.cpp
src/accelerators/bvh/: BVH.cpp  BVHBuilders.cpp  BVHRecursiveBuilder.cpp  HLBVHBuilder.cpp  RecursiveBuilder.cpp  SAH.cpp
src/cameras/: CMakeLists.txt  EnvironmentCamera.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp
src/core/: AnimatedTransformation.cpp  BoundingSphere.hpp  Bounds2.hpp  Bounds2Impl.hpp  CMakeLists.txt  Camera.cpp  EFloat.cpp  Film.cpp  GeometricPrimitive.cpp  Interval.cpp  Matrix4x4.cpp  Normal3.hpp  Normal3Impl.hpp  Parallel.cpp  Point2.hpp  Point2Impl.hpp  Point3.hpp  Point3Impl.hpp  Primitive.cpp  Quaternion.cpp  RNG.cpp  Ray.cpp  RayDifferential.cpp  SampledSpectrum.cpp  Shape.cpp  Spectrum.cpp  SurfaceInteraction.cpp  TRS.cpp  Transformation.cpp  TransformedPrimitive.cpp  Vector2.hpp  Vector3.hpp  Vector3Impl.hpp  core.cpp  core.hpp
src/core/color/: Spectrum.cpp
src/core/geometry/: Ray.cpp  RayDifferential.cpp
src/core/math/: Math.cpp  Matrix4x4.cpp
src/core/primitive/: GeometricPrimitive.cpp  Primitive.cpp  TransformedPrimitive.cpp
src/core/reflection/: BxDF.cpp  Utility.cpp
src/core/sampling/: GlobalSampler.cpp  LowDiscrepancy.cpp  PixelSampler.cpp  Sampler.cpp  Sampling.cpp
src/core/transformations/: AnimatedTransformation.cpp  Quaternion.cpp  TRS.cpp  Transformation.cpp
src/filters/: Box.cpp  CMakeLists.txt  Gaussian.cpp  Mitchell.cpp  Sinc.cpp  Triangle.cpp
src/functional/: CMakeLists.txt
src/memory/: CMakeLists.txt  Memory.cpp  MemoryArena.cpp
src/parallel/: CMakeLists.txt  Parallel.cpp
src/reflection_models/: CMakeLists.txt  LambertianReflection.cpp  LambertianTransmission.cpp  SpecularReflection.cpp  SpecularTransmission.cpp
src/samplers/: CMakeLists.txt  HaltonSampler.cpp  StratifiedSampler.cpp
src/shapes/: CMakeLists.txt  Cone.cpp  Cylinder.cpp  Disk.cpp  Paraboloid.cpp  Sphere.cpp  Triangle.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  bounds2.cpp  bounds3.cpp  core.cpp  functional.cpp  interval.cpp  matrix4x4.cpp  parallel.cpp  transformation.cpp
tests/core/geometry/: bounds2.cpp  bounds3.cpp
tests/core/math/: interval.cpp  math.cpp  matrix4x4.cpp
tests/core/sampling/: lowDiscrepancy.cpp
tests/core/transformations/: transformation.cpp
tests/filters/: CMakeLists.txt  filters.cpp
tests/functional/: CMakeLists.txt  functional.cpp
tests/memory/: CMakeLists.txt  blockedUVArray.cpp  memory.cpp  memoryArena.cpp
tests/parallel/: CMakeLists.txt  parallel.cpp
